--- a/index.html
+++ b/index.html
@@ -5,17 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="/Trofify.png" />
     <title>TROFIFY</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Trofify - The Ultimate Sports Social Platform" />
+    <meta name="author" content="Trofify Team" />
 
     <meta property="og:title" content="TROFIFY" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Connect, share, and celebrate sports on Trofify." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/Trofify.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
